# homux

./: Cargo.toml  README.md  config_template.toml  secrets_template.toml
src/: add.rs  apply.rs  config.rs  files.rs  lib.rs  main.rs
