[package]
name = "homux"
description = "Synchronize your home directory across host machines."
repository = "https://github.com/ArielHorwitz/matchpick"
license = "Unlicense"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
matchpick = "0.1.1"
serde = { version = "1.0.200", features = ["derive"] }
toml = "0.8.12"
